added support for var decls inside for stmts (handled by preprocessor), also made parser ignore __extension__ keywords left over from preprocessing

--- a/preprocessor/CMakeLists.txt
+++ b/preprocessor/CMakeLists.txt
@@ -42,6 +42,7 @@ set(tricera-preprocessor_SOURCES
   lib/TypedefRemover.cpp
   lib/UnusedDeclCommenter.cpp
   lib/TypeCanoniser.cpp
+  lib/ForLoopStmtExtractor.cpp
   lib/Utilites.cpp
 )
 
