experimental: added line numbers for each program variable (for most variables, if one exists) in the system predicates list.

--- a/cc-parser/Makefile
+++ b/cc-parser/Makefile
@@ -1,7 +1,7 @@
 
 
 CUP = java_cup.Main
-CUPFLAGS = -nopositions -expect 100
+CUPFLAGS = -expect 100 -locations
 
 JLEX = JLex.Main
 
@@ -15,7 +15,7 @@ PARSER_BINDIR=$(PARSER_BASEDIR)/bin
 
 
 JLEX_PATH:=/usr/share/java/JLex.jar
-CLASSPATH:=$(CLASSPATH):$(PARSER_BASEDIR)/lib/java-cup-11a.jar:$(PARSER_BASEDIR):$(JLEX_PATH)
+CLASSPATH:=$(CLASSPATH):$(PARSER_BASEDIR)/lib/java-cup-11b.jar:$(PARSER_BASEDIR):$(JLEX_PATH)
 
 JAVAC:=javac
 #JAVAC_FLAGS:=-target 1.5
@@ -27,10 +27,10 @@ JAVA_FLAGS:=
 export CLASSPATH
 
 
-all: cc-parser.jar tricera/concurrency/concurrentC/Test.class
+all: cc-parser.jar tricera/concurrency/concurrent_c/Test.class
 
 
-cc-parser.jar: $(PARSER_BINDIR) $(PARSER_BINDIR)/tricera/concurrency/concurrentC/Absyn/concurrentC.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/sym.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/Yylex.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/PrettyPrinterNonStatic.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/parser.class
+cc-parser.jar: $(PARSER_BINDIR) $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Absyn/concurrent_c.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/sym.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Yylex.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/parser.class
 	cd $(PARSER_BINDIR) && jar cf $(PARSER_BASEDIR)/cc-parser.jar tricera
 
 
@@ -41,58 +41,58 @@ clean:
 #	rm -rf parser.jar
 	rm -rf $(PARSER_BINDIR)
 	rm -rf tricera
-	rm -rf concurrentC.tex concurrentC.dvi concurrentC.aux concurrentC.log concurrentC.ps
+	rm -rf concurrent_c.tex concurrent_c.dvi concurrent_c.aux concurrent_c.log concurrent_c.ps
 
 
 # just any of the files that is created by bnfc
-concurrentC.tex: concurrentC.cf
-	bnfc -p tricera.concurrency -java1.5 concurrentC.cf
+concurrent_c.tex: concurrentC.cf
+	bnfc -p tricera.concurrency --java -l concurrentC.cf
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/Absyn/concurrentC.java: concurrentC.cf
-	bnfc -p tricera.concurrency -java1.5 concurrentC.cf
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Absyn/concurrent_c.java: concurrentC.cf
+	bnfc -p tricera.concurrency --java -l concurrentC.cf
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/Absyn/concurrentC.class: $(PARSER_BINDIR)/tricera/concurrency/concurrentC/Absyn/concurrentC.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/Absyn/*.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Absyn/concurrent_c.class: $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Absyn/concurrent_c.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/Absyn/*.java
 
-tricera/concurrency/concurrentC/Yylex.java: tricera/concurrency/concurrentC/Yylex
+tricera/concurrency/concurrent_c/Yylex.java: tricera/concurrency/concurrent_c/Yylex
 #       remove some quotes that JLex does not accept
-#	sed 's/\\\^/\^/g' <smtlib/Yylex >smtlib/Yylex.temp
-#	mv smtlib/Yylex.temp smtlib/Yylex
+#	sed 's/\\\^/\^/g' <tricera/concurrency/concurrent_c/Yylex >tricera/concurrency/concurrent_c/Yylex.temp
+#	mv tricera/concurrency/concurrent_c/Yylex.temp smtlib/Yylex
 #       quote dashes "-"
-#	sed 's/\\\+-/\\+\\-/g' <smtlib/Yylex >smtlib/Yylex.temp
-#	mv smtlib/Yylex.temp smtlib/Yylex
-	${JAVA} ${JAVA_FLAGS} ${JLEX} tricera/concurrency/concurrentC/Yylex
+#	sed 's/\\\+-/\\+\\-/g' <tricera/concurrency/concurrent_c/Yylex >tricera/concurrency/concurrent_c/Yylex.temp
+#	mv tricera/concurrency/concurrent_c/Yylex.temp tricera/concurrency/concurrent_c/Yylex
+	${JAVA} ${JAVA_FLAGS} ${JLEX} tricera/concurrency/concurrent_c/Yylex
 
-tricera/concurrency/concurrentC/sym.java tricera/concurrency/concurrentC/parser.java: tricera/concurrency/concurrentC/concurrentC.cup
-	${JAVA} ${JAVA_FLAGS} ${CUP} ${CUPFLAGS} tricera/concurrency/concurrentC/concurrentC.cup
-	mv sym.java parser.java tricera/concurrency/concurrentC/
+tricera/concurrency/concurrent_c/sym.java tricera/concurrency/concurrent_c/parser.java: tricera/concurrency/concurrent_c/_cup.cup
+	${JAVA} ${JAVA_FLAGS} ${CUP} ${CUPFLAGS} tricera/concurrency/concurrent_c/_cup.cup
+	mv sym.java parser.java tricera/concurrency/concurrent_c/
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/Yylex.class: tricera/concurrency/concurrentC/Yylex.java tricera/concurrency/concurrentC/sym.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/Yylex.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Yylex.class: tricera/concurrency/concurrent_c/Yylex.java tricera/concurrency/concurrent_c/sym.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/Yylex.java
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/sym.class: tricera/concurrency/concurrentC/sym.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/sym.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/sym.class: tricera/concurrency/concurrent_c/sym.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/sym.java
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/parser.class: tricera/concurrency/concurrentC/parser.java tricera/concurrency/concurrentC/sym.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/parser.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/parser.class: tricera/concurrency/concurrent_c/parser.java tricera/concurrency/concurrent_c/sym.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/parser.java
 
-tricera/concurrency/concurrentC/PrettyPrinterNonStatic.java: tricera/concurrency/concurrentC/PrettyPrinter.java
-	sed 's/PrettyPrinter/PrettyPrinterNonStatic/g' <tricera/concurrency/concurrentC/PrettyPrinter.java | sed 's/static//g' >tricera/concurrency/concurrentC/PrettyPrinterNonStatic.java
+tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.java: tricera/concurrency/concurrent_c/PrettyPrinter.java
+	sed 's/PrettyPrinter/PrettyPrinterNonStatic/g' <tricera/concurrency/concurrent_c/PrettyPrinter.java | sed 's/static//g' >tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.java
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/PrettyPrinter.class: tricera/concurrency/concurrentC/PrettyPrinter.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/PrettyPrinter.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/PrettyPrinter.class: tricera/concurrency/concurrent_c/PrettyPrinter.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/PrettyPrinter.java
 
-$(PARSER_BINDIR)/tricera/concurrency/concurrentC/PrettyPrinterNonStatic.class: tricera/concurrency/concurrentC/PrettyPrinterNonStatic.java
-	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrentC/PrettyPrinterNonStatic.java
+$(PARSER_BINDIR)/tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.class: tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.java
+	${JAVAC} ${JAVAC_FLAGS} -d $(PARSER_BINDIR) tricera/concurrency/concurrent_c/PrettyPrinterNonStatic.java
 
-tricera/concurrency/concurrentC/Test.class: tricera/concurrency/concurrentC/Test.java $(PARSER_BINDIR)/tricera/concurrency/concurrentC/PrettyPrinter.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/Yylex.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/parser.class $(PARSER_BINDIR)/tricera/concurrency/concurrentC/sym.class
-	${JAVAC} ${JAVAC_FLAGS} tricera/concurrency/concurrentC/Test.java
+tricera/concurrency/concurrent_c/Test.class: tricera/concurrency/concurrent_c/Test.java $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/PrettyPrinter.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/Yylex.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/parser.class $(PARSER_BINDIR)/tricera/concurrency/concurrent_c/sym.class
+	${JAVAC} ${JAVAC_FLAGS} tricera/concurrency/concurrent_c/Test.java
 
-concurrentC.dvi: concurrentC.tex
-	${LATEX} concurrentC.tex
+concurrent_c.dvi: concurrent_c.tex
+	${LATEX} concurrent_c.tex
 
-concurrentC.pdf: concurrentC.dvi
-	${DVIPDF} concurrentC.dvi
+concurrent_c.pdf: concurrent_c.dvi
+	${DVIPDF} concurrent_c.dvi
 
-concurrentC.ps: concurrentC.dvi
-	${DVIPS} concurrentC.dvi -o concurrentC.ps
+concurrent_c.ps: concurrent_c.dvi
+	${DVIPS} concurrent_c.dvi -o concurrent_c.ps
