Main changes - Exact line number for failed program assertions - Print line number for failed ACSL post-conditions - For non-concurrent and non-replicated systems, -eogCEX   now prints full graphical counterexamples, even for programs   with nonlinear clauses (e.g., programs with recursive calls,   contracts and uninterpreted predicates). - Better printing with -pDot for non-linear programs - ACSL translator now supports binary expressions. - Do not run ACSL encoder on programs that do not need it.
Other changes
- build.sbt: fix horn-concurrency version
- cc-parser/Makefile: fix Java versions to 1.8
- regression tests: update answers
- Added CCClause, a richer version of Clause that allows tracking more
  information about clauses.
- Added a backtranslator from merged clauses to the original clauses to
  horn-concurrency, TriCera now makes use of this to display the path taken
  in -eogCEX counterexamles.

Known issues
- In ACSL contracts, parentheses are needed around nearly all expressions.
- Stack pointers + function contracts are still not supported (and no error
   is thrown about this).
- -eogCEX does not work for concurrent systems, a message is printed to use
  the option -cex instead.
- -cex counterexamples are incomplete for nonlinear clauses, user is warned
  to use -eogCEX in these cases.

--- a/cc-parser/Makefile
+++ b/cc-parser/Makefile
@@ -18,7 +18,7 @@ JLEX_PATH:=/usr/share/java/JLex.jar
 CLASSPATH:=$(CLASSPATH):$(PARSER_BASEDIR)/lib/java-cup-11b.jar:$(PARSER_BASEDIR):$(JLEX_PATH)
 
 JAVAC:=javac
-#JAVAC_FLAGS:=-target 1.5
+JAVAC_FLAGS:=-target 1.8 -source 1.8
 
 JAVA:=java
 JAVA_FLAGS:=
