Enable CI for extquans branch.

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,7 +2,7 @@ name: Scala CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, extquans ]
   pull_request:
     branches: [ master ]
 
