Add missing cup runtime dependency, refactor parser makefiles.

--- a/acsl-parser/Makefile
+++ b/acsl-parser/Makefile
@@ -1,6 +1,7 @@
 PARSER_BASEDIR=$(shell pwd)
+CCPARSER_BASEDIR=$(PARSER_BASEDIR)/../cc-parser
+PARSER_LIBDIR=$(CCPARSER_BASEDIR)/lib
 PARSER_BINDIR=$(PARSER_BASEDIR)/bin
-PARSER_LIBDIR = $(PARSER_BASEDIR)/../cc-parser/lib
 
 CUP = java_cup.Main
 CUPFLAGS = -expect 7 -locations
@@ -23,36 +24,9 @@ JAVA:=java
 JAVA_FLAGS:=
 
 .PHONY: all
-all: $(CUP_JAR) $(JFLEX_PLUGIN_JAR) acsl-parser.jar tricera/acsl/Test.class
+all: download-jars acsl-parser.jar tricera/acsl/Test.class
 
-$(PARSER_LIBDIR):
-	@mkdir -p $@
-
-$(CUP_JAR): | $(PARSER_LIBDIR)
-	@echo "Looking for cup jar at $(CUP_JAR)"
-	@if [ ! -f $(CUP_JAR) ]; then \
-			echo "not found, downloading..."; \
-	    mvn org.apache.maven.plugins:maven-dependency-plugin:2.10:get \
-	        -DremoteRepositories=https://repo.maven.apache.org/maven2/ \
-	        -Dartifact=com.github.vbmacher:java-cup:11b-20160615-2 \
-	        -Dtransitive=false \
-	        -Ddest=$(CUP_JAR); \
-	else \
-			echo "found, skipping download."; \
-	fi
-
-$(JFLEX_PLUGIN_JAR): | $(PARSER_LIBDIR)
-	@echo "Looking for JFlex plugin jar at $(JFLEX_PLUGIN_JAR)"
-	@if [ ! -f $(JFLEX_PLUGIN_JAR) ]; then \
-	    echo "not found, downloading..."; \
-	    mvn org.apache.maven.plugins:maven-dependency-plugin:2.10:get \
-	        -DremoteRepositories=https://repo.maven.apache.org/maven2/ \
-	        -Dartifact=de.jflex:jflex:1.9.1 \
-	        -Dtransitive=false \
-	        -Ddest=$(JFLEX_PLUGIN_JAR); \
-	else \
-			echo "found, skipping download."; \
-	fi
+include $(CCPARSER_BASEDIR)/download_jars.mk
 
 acsl-parser.jar: $(PARSER_BINDIR) $(PARSER_BINDIR)/tricera/acsl/Absyn/acsl.class $(PARSER_BINDIR)/tricera/acsl/sym.class $(PARSER_BINDIR)/tricera/acsl/Yylex.class $(PARSER_BINDIR)/tricera/acsl/PrettyPrinterNonStatic.class $(PARSER_BINDIR)/tricera/acsl/parser.class
 	cd $(PARSER_BINDIR) && jar cf $(PARSER_BASEDIR)/acsl-parser.jar tricera
@@ -60,6 +34,7 @@ acsl-parser.jar: $(PARSER_BINDIR) $(PARSER_BINDIR)/tricera/acsl/Absyn/acsl.class
 $(PARSER_BINDIR):
 	mkdir $(PARSER_BINDIR)
 
+.PHONY: clean
 clean:
 #	rm -rf parser.jar
 	rm -rf $(PARSER_BINDIR)
