Bundle cup runtime, do not download other parser jars.

--- a/cc-parser/Makefile
+++ b/cc-parser/Makefile
@@ -1,5 +1,5 @@
 PARSER_BASEDIR=$(shell pwd)
-PARSER_LIBDIR=$(PARSER_BASEDIR)/../lib
+PARSER_LIBDIR=$(PARSER_BASEDIR)/lib
 PARSER_BINDIR=$(PARSER_BASEDIR)/bin
 
 CUP = java_cup.Main
