Bug fixes in properties and solution printing, updates regression tests. - Fixes the regression tests based on properties, removing   redundant ones. - Fixes a bug where valid-cleanup ghost variable was initialized   twice. - Fixes a bug in printing contracts for void functions. - Makes printing of solutions more robust by replacing   string replacement with term rewriting.

--- a/regression-tests/acsl-standalone/getptr_safe.yml
+++ b/regression-tests/acsl-standalone/getptr_safe.yml
@@ -1,11 +1,10 @@
 format_version: '2.0'
 
-input_files: 'memtrack-04.c'
+input_files: 'getptr_safe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
     expected_verdict: true
-    subproperty: valid-memtrack
 
 options:
   language: C
