--- a/regression-tests/acsl-standalone/getptr_unsafe.yml
+++ b/regression-tests/acsl-standalone/getptr_unsafe.yml
@@ -1,11 +1,11 @@
 format_version: '2.0'
 
-input_files: 'memtrack-06.c'
+input_files: 'getptr_unsafe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
-    expected_verdict: true
-    subproperty: valid-memtrack
+    expected_verdict: false
+    subproperty: valid-deref
 
 options:
   language: C
