--- a/regression-tests/horn-hcc-array/pointer-arith-1-safe.yml
+++ b/regression-tests/horn-hcc-array/pointer-arith-1-safe.yml
@@ -1,11 +1,11 @@
 format_version: '2.0'
 
-input_files: 'simple-alloca-memsafety1.c'
+input_files: 'pointer-arith-1-safe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
     expected_verdict: true
-  - property_file: ../properties/valid-memcleanup.prp
+  - property_file: ../properties/unreach-call.prp
     expected_verdict: true
 
 options:
