--- a/regression-tests/horn-hcc-array/pointer-arith-3-safe.yml
+++ b/regression-tests/horn-hcc-array/pointer-arith-3-safe.yml
@@ -1,6 +1,6 @@
 format_version: '2.0'
 
-input_files: 'simple-global-array.c'
+input_files: 'pointer-arith-3-safe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
