--- a/regression-tests/horn-hcc-array/pointer-arith-3-unsafe.yml
+++ b/regression-tests/horn-hcc-array/pointer-arith-3-unsafe.yml
@@ -1,11 +1,13 @@
 format_version: '2.0'
 
-input_files: 'out-of-bounds-line1.c'
+input_files: 'pointer-arith-3-unsafe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
     expected_verdict: false
     subproperty: valid-deref
+  - property_file: ../properties/unreach-call.prp
+    expected_verdict: false
 
 options:
   language: C
