--- a/regression-tests/horn-hcc-heap/free-1-unsafe.yml
+++ b/regression-tests/horn-hcc-heap/free-1-unsafe.yml
@@ -1,11 +1,11 @@
 format_version: '2.0'
 
-input_files: 'simple-dynamic-memsafety2.c'
+input_files: 'free-1-unsafe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
     expected_verdict: false
-    subproperty: valid-memtrack
+    subproperty: valid-deref
 
 options:
   language: C
