--- a/regression-tests/horn-hcc-heap/free-2-nondet-unsafe.yml
+++ b/regression-tests/horn-hcc-heap/free-2-nondet-unsafe.yml
@@ -1,11 +1,11 @@
 format_version: '2.0'
 
-input_files: 'simple-dynamic-memsafety1.c'
+input_files: 'free-2-nondet-unsafe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
-    expected_verdict: true
-    subproperty: valid-memtrack
+    expected_verdict: false
+    subproperty: valid-deref
 
 options:
   language: C
