--- a/regression-tests/horn-hcc-heap/free-3-safe.yml
+++ b/regression-tests/horn-hcc-heap/free-3-safe.yml
@@ -1,11 +1,10 @@
 format_version: '2.0'
 
-input_files: 'out-of-bounds-line1.c'
+input_files: 'free-3-safe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
-    expected_verdict: false
-    subproperty: valid-deref
+    expected_verdict: true
 
 options:
   language: C
