--- a/regression-tests/horn-hcc-heap/free-4-unsafe.yml
+++ b/regression-tests/horn-hcc-heap/free-4-unsafe.yml
@@ -1,6 +1,6 @@
 format_version: '2.0'
 
-input_files: 'out-of-bounds-line1.c'
+input_files: 'free-4-unsafe.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
