--- a/regression-tests/horn-hcc-heap/unsafe-access-001.yml
+++ b/regression-tests/horn-hcc-heap/unsafe-access-001.yml
@@ -1,11 +1,11 @@
 format_version: '2.0'
 
-input_files: 'memtrack-05.c'
+input_files: 'unsafe-access-001.c'
 
 properties:
   - property_file: ../properties/valid-memsafety.prp
     expected_verdict: false
-    subproperty: valid-memtrack
+    subproperty: valid-deref
 
 options:
   language: C
