--- a/src/main/resources/tricera/heap/encodings/RW-fun-opt.yml
+++ b/src/main/resources/tricera/heap/encodings/RW-fun-opt.yml
@@ -29,7 +29,9 @@ init_code:
 # Heap operations
 read_fn:
   return_type: "HEAP_TYPE"
-  args: [{ name: "p", type: "PTR_TYPE" }]
+  args:
+    - { name: "p",   type: "PTR_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     HEAP_TYPE result;
     ++$cnt;
@@ -56,6 +58,7 @@ write_fn:
   args:
     - { name: "p", type: "PTR_TYPE" }
     - { name: "e", type: "HEAP_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     ++$cnt;
     //if (0 < p && p <= $allocCtr) {
@@ -67,7 +70,9 @@ write_fn:
 
 alloc_fn:
   return_type: "PTR_TYPE"
-  args: [{ name: "e", type: "HEAP_TYPE" }]
+  args:
+    - { name: "e",   type: "HEAP_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     int p = ++$allocCtr;
     ++$cnt;
@@ -79,5 +84,7 @@ alloc_fn:
 
 free_fn:
   return_type: "void"
-  args: [{ name: "p", type: "PTR_TYPE" }]
+  args:
+    - { name: "p", type: "PTR_TYPE" }
+    - { name: "loc", type: "int" }
   body: ""
