--- a/src/main/resources/tricera/heap/encodings/RW-fun.yml
+++ b/src/main/resources/tricera/heap/encodings/RW-fun.yml
@@ -27,7 +27,9 @@ init_code:
 # Heap operations
 read_fn:
   return_type: "HEAP_TYPE"
-  args: [{ name: "p", type: "PTR_TYPE" }]
+  args:
+    - { name: "p",   type: "PTR_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     HEAP_TYPE result;
     int t;
@@ -49,6 +51,7 @@ write_fn:
   args:
     - { name: "p", type: "PTR_TYPE" }
     - { name: "e", type: "HEAP_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     ++$cnt;
     if (0 < p && p <= $allocCtr) {
@@ -58,7 +61,9 @@ write_fn:
 
 alloc_fn:
   return_type: "PTR_TYPE"
-  args: [{ name: "e", type: "HEAP_TYPE" }]
+  args:
+    - { name: "e",   type: "HEAP_TYPE" }
+    - { name: "loc", type: "int" }
   body: |
     int p = ++$allocCtr;
     ++$cnt;
@@ -68,5 +73,7 @@ alloc_fn:
 
 free_fn:
   return_type: "void"
-  args: [{ name: "p", type: "PTR_TYPE" }]
+  args:
+    - { name: "p", type: "PTR_TYPE" }
+    - { name: "loc", type: "int" }
   body: ""
